--- a/.eslintrc
+++ b/.eslintrc
@@ -49,7 +49,7 @@
     "curly": [2,"all"],
     "dot-location": [2,"property"],
     "eqeqeq": [2, "smart"],
-    "id-blacklist": [0, "data", "err", "e", "cb", "callback"],
+    "id-blacklist": [1, "data", "err", "e", "cb", "callback"],
     "id-length": [1,{ "min": 2, "max": 50, "exceptions": ["_"] }],
     "indent": [1, "tab"],
     "key-spacing": [1,{
@@ -80,6 +80,7 @@
     "no-nested-ternary": 2,
     "no-self-compare": 2,
     "no-spaced-func": 2,
+    "no-unused-vars": 0,
     "no-var": 2,
     "no-whitespace-before-property": 2,
     "object-curly-spacing": [2, "always"],
@@ -102,7 +103,7 @@
     "react/jsx-indent-props": [1,"tab"],
     "react/jsx-key": 2,
     "react/jsx-max-props-per-line": [1,{maximum: 4}],
-    "react/jsx-no-bind": 2,
+    "react/jsx-no-bind": 0,
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-undef": 2,
     "react/jsx-pascal-case": 2,
@@ -110,8 +111,8 @@
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/no-multi-comp": 2,
-    "react/no-set-state": 0,
-    "react/prefer-es6-class": 1,
+    "react/no-set-state": 2,
+    "react/prefer-es6-class": 2,
     "react/prop-types": [1, { "ignore":["children"] } ],
     "react/react-in-jsx-scope": 1,
     "react/require-render-return": 2,
