--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "gulp-eslint": "^2.0.0",
     "gulp-ignore": "^2.0.1",
     "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.0",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.5.3",
@@ -48,12 +50,15 @@
     "main-bower-files": "^2.13.1",
     "node-sass": "^3.7.0",
     "react": "^15.0.2",
-    "react-bootstrap": "^0.29.4",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.5",
     "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.4",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack-stream": "^3.2.0",
