--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
     "eqeqeq": [2, "smart"],
     "id-blacklist": [1, "data", "err", "e", "cb", "callback"],
     "id-length": [1,{ "min": 2, "max": 50, "exceptions": ["_"] }],
-    "indent": [1, "tab"],
+    "indent": [1, "tab", {"SwitchCase": 1}],
     "key-spacing": [1,{
       "singleLine": {
         "beforeColon": false,
@@ -60,7 +60,6 @@
       "multiLine": {
         "beforeColon": false,
         "afterColon": true,
-        "align": "value",
         "mode": "minimum"
       }
     }],
@@ -68,11 +67,13 @@
     "max-len": [1, 150],
     "max-params": 1,
     "max-statements": 1,
-    "new-cap": 2,
+    "new-cap": 0,
     "newline-before-return": 2,
     "no-alert": 2,
+    "no-case-declarations": 0,
+    "no-console": 1,
     "no-const-assign": 2,
-    "no-magic-numbers": 2,
+    "no-magic-numbers": 0,
     "no-mixed-spaces-and-tabs": [2, "smart-tabs"],
     "no-multi-spaces": 1,
     "no-multi-str": 2,
