--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.3",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
@@ -46,18 +47,25 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.5.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jwt-decode": "^2.0.1",
     "lodash": "^4.12.0",
     "main-bower-files": "^2.13.1",
     "node-sass": "^3.7.0",
     "react": "^15.0.2",
+    "react-addons-linked-state-mixin": "^15.1.0",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^0.14.7",
+    "react-mixin": "^3.0.5",
     "react-redux": "^4.4.5",
-    "react-router": "^2.0.0",
+    "react-router": "1.0.0-rc1",
     "react-router-redux": "^4.0.4",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-router": "^1.0.0-beta8",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
