--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.5.3",
+    "history": "^1.9.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.0.0",
     "jwt-decode": "^2.0.1",
     "lodash": "^4.12.0",
     "main-bower-files": "^2.13.1",
