--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^6.2.3",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
