--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2016","stage-1","react"],
+  "presets": ["latest","stage-1","react"],
 	"env": {
     "development": {
       "plugins": [
