--- a/.eslintrc
+++ b/.eslintrc
@@ -103,7 +103,7 @@
     "react/jsx-indent": [1,"tab"],
     "react/jsx-indent-props": [1,"tab"],
     "react/jsx-key": 2,
-    "react/jsx-max-props-per-line": [1,{maximum: 4}],
+    "react/jsx-max-props-per-line": [1,{"maximum": 4}],
     "react/jsx-no-bind": 0,
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-undef": 2,
@@ -117,7 +117,7 @@
     "react/prop-types": [1, { "ignore":["children"] } ],
     "react/react-in-jsx-scope": 1,
     "react/require-render-return": 2,
-    "react/self-closing-comp": 2,
-    "react/wrap-multilines": 2
+    "react/self-closing-comp": [2, {"html": false, "component": true}],
+    "react/jsx-wrap-multilines": 2
   }
 }
