--- a/package.json
+++ b/package.json
@@ -15,51 +15,53 @@
   },
   "babel": {
     "presets": [
-      "es2016"
+      "latest"
     ]
   },
-  "repository": "",
+  "repository": "https://github.com/aikssen/redux-starter",
   "author": "Ever Cifuentes",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.8.0",
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.5.2",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.3",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2016": "^6.0.11",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.10.1",
+    "babel-preset-stage-1": "^6.22.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.14.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-react": "^6.9.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-ignore": "^2.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rimraf": "^0.2.0",
     "gulp-sync": "^0.1.4",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^2.0.1",
     "lodash": "^4.12.0",
     "main-bower-files": "^2.13.1",
-    "node-sass": "^3.7.0",
+    "node-sass": "^4.3.0",
+    "raw-loader": "^0.5.1",
     "react": "^15.0.2",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.0.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "react-router-redux": "^4.0.4",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack-stream": "^3.2.0",
     "winston": "^2.2.0"
