--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "morgan": "^1.7.0",
+    "socket.io": "^1.7.3",
     "store": "^1.3.20",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
